[metadata]
name = PyLoadAPI
version = 1.1.0
author = Manfred Dennerlein Rodelo
author_email = manfred@dennerlein.name
description = "Simple wrapper for pyLoad's API."
long_description = file: README.md, CHANGELOG.md, LICENCE
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/tr4nt0r/PyLoadAPI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.11
install_requires =
    aiohttp~=3.9

[options.packages.find]
where=src
